simpleapp-deploy-k8s.yaml
#simpleapp
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-service
  labels:
    app: simpleapp-app
spec:
  selector:
    app: simpleapp-app
  type: NodePort
  ports:
    - nodePort: 30001
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp-deploy
spec:
  selector:
    matchLabels:
      app: simpleapp-app
  replicas: 1
  template:
    metadata:
      labels:
        app: simpleapp-app
    spec:
      containers:
        - name: simpleapp
          image: bathurudocker/devops-simpleapp:latest
          ports:
            - containerPort: 8080
#  http://3.6.94.232:32000/simpleapp/
